--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ section {
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .navbar__menu li {
@@ -76,7 +76,7 @@ section {
 
 .navbar__menu .menu__link {
     display: block;
-    padding: 1em;
+    padding: 2em;
     font-weight: bold;
     text-decoration: none;
     color: #000;
@@ -87,7 +87,16 @@ section {
     color: #fff;
     transition: ease 0.3s all;
 }
+nav a {
+    color: #000;
+    text-decoration: none;
+    padding: 3px;
+  }
 
+  nav a.active {
+    font-weight: bold;
+    background-color: rgb(154, 246, 223);
+  }
 /* Header Styles */
 .page__header {
     background: #fff;
