--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
 
 /* ---- Base Rules ---- */
 body {
-    background: rgb(136,203,171);
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+    background: rgb(194, 144, 119);
+    background: linear-gradient(0deg, rgb(246, 229, 220) 0%, rgb(167, 68, 2) 100%);
     margin: 0;
     font-family: 'Merriweather', serif;
     color: #fff;
@@ -20,7 +20,7 @@ body {
 
 
 /* Typeography General*/
-h1 {
+h3 {
     font-family: 'Fira Sans', sans-serif;
     font-size: 3em;
     margin: 2em 1rem;
@@ -59,7 +59,17 @@ section {
     position: relative;
     min-height: 80vh;
 }
+.button{
 
+    background-color: #ffffff;
+    color: #b50303;
+    padding: 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: none;
+    border-radius: 12px;
+}
 
 /* ---- Module Rules ---- */
 
@@ -67,7 +77,7 @@ section {
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
-    text-align: center;
+    text-align: right;
 }
 
 .navbar__menu li {
@@ -76,7 +86,7 @@ section {
 
 .navbar__menu .menu__link {
     display: block;
-    padding: 2em;
+    padding: 1em;
     font-weight: bold;
     text-decoration: none;
     color: #000;
@@ -87,16 +97,18 @@ section {
     color: #fff;
     transition: ease 0.3s all;
 }
+
 nav a {
     color: #000;
     text-decoration: none;
-    padding: 3px;
+    padding: 5px;
   }
 
   nav a.active {
     font-weight: bold;
-    background-color: rgb(154, 246, 223);
+    color: #f00;
   }
+
 /* Header Styles */
 .page__header {
     background: #fff;
